kubernetes/apps/vault-enterprise/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault-system
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/component: secrets-management
