kubernetes/apps/vault-enterprise/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault-ingress
  namespace: vault-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vault.proxcloud.io`)
      kind: Rule
      services:
        - name: vault-active
          port: 8200
  tls:
    secretName: vault-tls
